--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "goit-node-rest-api",
   "type": "module",
   "scripts": {
+    "test": "node --experimental-vm-modules node_modules/.bin/jest",
     "start": "node ./server.js",
     "dev": "nodemon ./server.js"
   },
@@ -10,11 +11,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "gravatar": "^1.8.2",
+    "jimp": "^0.22.10",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.1"
+    "mongoose": "^8.1.1",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
+    "supertest": "^6.3.4"
   }
 }
