--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon ./server.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
@@ -16,7 +17,8 @@
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nanoid": "^5.0.5"
   },
   "devDependencies": {
     "jest": "^29.7.0",
